--- a/artcontrolme.ipynb
+++ b/artcontrolme.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:f7eaf0cc131984d5ccf1daa0954015863e314775a7191dc57d29b1abf9112faf"
+  "signature": "sha256:64285b4a5c1aec5316643c001ad241dc08cb47c6a08cc64d6c2f76ccd1b3cd43"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -17,7 +17,8 @@
       "\n",
       "Python script to deal with exported artcontrolme static files. The files are located at https://github.com/artcontrol/artcontrolme. '.wp' files that contain HTML of posts. '.meta' files contain name, permalink, date, cat, tags, id.\n",
       "\n",
-      "The script deletes all tag data f\n",
+      "The script deletes all tag data from the .meta files\n",
+      "It performs a nikola build and rsync to server. \n",
       "\n"
      ]
     },
