--- a/fairfieldlogin.ipynb
+++ b/fairfieldlogin.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:ff0bf78d27d844af41411a73564ff48e85e832397ab546b63010f5b716337adb"
+  "signature": "sha256:6948446bc57109cf0d5770b61d56b29d43c472cd8aa529579b941bcf4194eb0e"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -130,119 +130,7 @@
        "output_type": "pyout",
        "prompt_number": 7,
        "text": [
-        "['aklmcam.py',\n",
-        " 'miniprojects.meta',\n",
-        " 'comet_cms.meta',\n",
-        " 'openbay.meta',\n",
-        " 'python-pandora.meta',\n",
-        " 'te-whare-o-te-ata.meta',\n",
-        " 'hackbrobeur.py',\n",
-        " 'SketchDaily-GestureDrawing.meta',\n",
-        " 'bbc2wp.meta',\n",
-        " 'autopaintpy123.meta',\n",
-        " 'wain.ipynb',\n",
-        " 'UnityLuaIntegration.meta',\n",
-        " 'ipython.meta',\n",
-        " 'xboxdrv.meta',\n",
-        " 'wcmckee.meta',\n",
-        " 'tweepy.meta',\n",
-        " 'pyatakl.meta',\n",
-        " 'DailyProgBot.meta',\n",
-        " 'flask.meta',\n",
-        " 'SuburbNightmare.meta',\n",
-        " 'RasPiWrite.meta',\n",
-        " 'art-lastfm.meta',\n",
-        " 'pybackupz.meta',\n",
-        " 'pygitx.ipynb',\n",
-        " 'cobal.eportfolio.meta',\n",
-        " 'compohub.meta',\n",
-        " 'pytm.meta',\n",
-        " 'broLove.meta',\n",
-        " 'ggj14.meta',\n",
-        " 'brobeur-static.meta',\n",
-        " 'hamiltoncomputerclub.org.nz.meta',\n",
-        " 'html5lib-python.meta',\n",
-        " 'wcmckee-notebook.meta',\n",
-        " 'render-useful.meta',\n",
-        " 'redTube.ipynb',\n",
-        " 'ipython-docker.meta',\n",
-        " 'pynztacam.ipynb',\n",
-        " 'redtube.meta',\n",
-        " 'prodo-game.meta',\n",
-        " 'selfspy.meta',\n",
-        " 'test.ipynb',\n",
-        " 'SoundWall.meta',\n",
-        " 'skins.meta',\n",
-        " 'molyjam2013.meta',\n",
-        " 'reddit_bot.meta',\n",
-        " 'hackbrobeur.ipynb',\n",
-        " 'openfaux-server.meta',\n",
-        " 'pygitx.meta',\n",
-        " 'DeltaBot.meta',\n",
-        " 'adypy.meta',\n",
-        " 'RPIO.meta',\n",
-        " 'raspi.meta',\n",
-        " 'redTube.py',\n",
-        " 'pithos.meta',\n",
-        " 'wirepil.meta',\n",
-        " 'bgj05-hungry.meta',\n",
-        " 'SortPictures.meta',\n",
-        " 'python-guide.meta',\n",
-        " 'AsylumJamCrushGame.meta',\n",
-        " 'niketa.meta',\n",
-        " 'ipython-hydra.meta',\n",
-        " 'vIPer.meta',\n",
-        " 'ihaskell-notebook.meta',\n",
-        " 'hackage-server.meta',\n",
-        " 'dockerfiles.meta',\n",
-        " 'vagrantboxes-heroku.meta',\n",
-        " 'imgur-python.meta',\n",
-        " 'LD48-Skins.meta',\n",
-        " 'flask-ghpages-example.meta',\n",
-        " 'clint.meta',\n",
-        " 'test.meta',\n",
-        " 'pymel.meta',\n",
-        " 'wcmckee.github.io.meta',\n",
-        " 'HTML5-Tiny.meta',\n",
-        " 'RedditPress.meta',\n",
-        " 'getsdrawn.ipynb',\n",
-        " 'wcmStringPY.meta',\n",
-        " 'brobeur-web.meta',\n",
-        " 'ouya-unity-plugin.meta',\n",
-        " 'BroBeurFishingDream.meta',\n",
-        " 'whaiout.meta',\n",
-        " 'marshmallow.meta',\n",
-        " 'opencompetencies.meta',\n",
-        " '4chan-API.meta',\n",
-        " 'artcontrol.py',\n",
-        " 'whaiout.ipynb',\n",
-        " 'pyladies.meta',\n",
-        " 'pyunderdog.meta',\n",
-        " 'nikola.meta',\n",
-        " 'anim_framework.meta',\n",
-        " 'getdrawn.py',\n",
-        " 'puphpet.meta',\n",
-        " 'massive-wright.meta',\n",
-        " 'iamagamer.meta',\n",
-        " 'Projects.meta',\n",
-        " 'Minecraft.meta',\n",
-        " 'pywp-post.meta',\n",
-        " 'wain.meta',\n",
-        " 'BirdCage.meta',\n",
-        " 'haskell-learn.meta',\n",
-        " 'william.py',\n",
-        " 'intercity.meta',\n",
-        " 'paintingautopy.meta',\n",
-        " 'TPB.meta',\n",
-        " 'bacongamejam05.meta',\n",
-        " 'getdrawn.ipynb',\n",
-        " 'getsdrawn.meta',\n",
-        " 'python-patterns.meta',\n",
-        " 'Triger.meta',\n",
-        " 'intro_programming.meta',\n",
-        " 'battlenet.meta',\n",
-        " 'artcontrol-api.meta',\n",
-        " 'wcmckee.com.meta']"
+        "['posts']"
        ]
       }
      ],
@@ -402,7 +290,7 @@
        "output_type": "pyout",
        "prompt_number": 16,
        "text": [
-        "1420623080.3753374"
+        "1420882646.710335"
        ]
       }
      ],
@@ -422,7 +310,7 @@
        "output_type": "pyout",
        "prompt_number": 17,
        "text": [
-        "1420623080.3753374"
+        "1420882646.710335"
        ]
       }
      ],
@@ -771,7 +659,7 @@
       "for opfa in opfair:\n",
       "    #opfa.replace(\" \", \"\")\n",
       "    print opfa\n",
-      "    [os.path.splitext(x)[0] for x in a]\n",
+      "    #[os.path.splitext(x)[0] for x in a]\n",
       "    opsrip.append(opfa.strip('.ipynb'))\n",
       "    print opfa.strip('.ipynb')\n",
       "   # if (' ') in opfa.strip('.ipynb'):\n",
@@ -784,21 +672,12 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "aklmcam.py\n"
-       ]
-      },
-      {
-       "ename": "NameError",
-       "evalue": "name 'a' is not defined",
-       "output_type": "pyerr",
-       "traceback": [
-        "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-        "\u001b[1;32m<ipython-input-23-c53e4fafb5fa>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      2\u001b[0m     \u001b[1;31m#opfa.replace(\" \", \"\")\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m     \u001b[1;32mprint\u001b[0m \u001b[0mopfa\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m     \u001b[1;33m[\u001b[0m\u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msplitext\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[1;32min\u001b[0m \u001b[0ma\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m     \u001b[0mopsrip\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mopfa\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstrip\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'.ipynb'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m     \u001b[1;32mprint\u001b[0m \u001b[0mopfa\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstrip\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'.ipynb'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-        "\u001b[1;31mNameError\u001b[0m: name 'a' is not defined"
+        "posts\n",
+        "osts\n"
        ]
       }
      ],
-     "prompt_number": 23
+     "prompt_number": 25
     },
     {
      "cell_type": "code",
@@ -809,7 +688,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 24
+     "prompt_number": 26
     },
     {
      "cell_type": "code",
@@ -820,20 +699,21 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 25
+     "prompt_number": 27
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
       "endate = time.strftime(\"%d\" + \"-\" + \"%b\" + \"-\" + \"%Y\" + \"-\")\n",
+      "#print time.strftime((\"%d\" + \"-\" + \"%b\" + \"-\" + \"%Y\"))\n",
       "          \n",
       "entim = time.strftime(\"%H:%M\")"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 26
+     "prompt_number": 31
     },
     {
      "cell_type": "code",
@@ -847,13 +727,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 27,
+       "prompt_number": 32,
        "text": [
-        "'08-Jan-2015-'"
+        "'10-Jan-2015-'"
        ]
       }
      ],
-     "prompt_number": 27
+     "prompt_number": 32
     },
     {
      "cell_type": "code",
@@ -874,8 +754,16 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 28
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "osts\n"
+       ]
+      }
+     ],
+     "prompt_number": 33
     },
     {
      "cell_type": "code",
@@ -886,7 +774,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 29
+     "prompt_number": 34
     },
     {
      "cell_type": "code",
@@ -897,7 +785,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 41
+     "prompt_number": 35
     },
     {
      "cell_type": "code",
@@ -911,13 +799,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 42,
+       "prompt_number": 36,
        "text": [
         "768"
        ]
       }
      ],
-     "prompt_number": 42
+     "prompt_number": 36
     },
     {
      "cell_type": "code",
