--- a/wcping.ipynb
+++ b/wcping.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:5a8839b060325e65d7fda3643c6b80095832503c32f0458dd95440c8e3442c88"
+  "signature": "sha256:a231a4a77bd5b94a4081444324d16d81c18ceb50bb59f65e6a339a9e586a4e72"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -32,7 +32,18 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
+     "outputs": [
+      {
+       "ename": "NameError",
+       "evalue": "name 'nmap' is not defined",
+       "output_type": "pyerr",
+       "traceback": [
+        "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+        "\u001b[1;32m<ipython-input-2-596b1b54ffb8>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mnm\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnmap\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mPortScanner\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+        "\u001b[1;31mNameError\u001b[0m: name 'nmap' is not defined"
+       ]
+      }
+     ],
      "prompt_number": 2
     },
     {
