--- a/wcpanda.ipynb
+++ b/wcpanda.ipynb
@@ -15,7 +15,7 @@
       "import numpy as np\n",
       "import pandas as pd\n",
       "import math\n",
-      "#import usb\n",
+      "import usb\n",
       "import os\n",
       "import re\n",
       "import subprocess\n",
@@ -24,8 +24,19 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 1
+     "outputs": [
+      {
+       "ename": "ImportError",
+       "evalue": "No module named usb",
+       "output_type": "pyerr",
+       "traceback": [
+        "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
+        "\u001b[1;32m<ipython-input-42-ebb8505b41be>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mpandas\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mmath\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[1;32mimport\u001b[0m \u001b[0musb\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mos\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mre\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+        "\u001b[1;31mImportError\u001b[0m: No module named usb"
+       ]
+      }
+     ],
+     "prompt_number": 42
     },
     {
      "cell_type": "markdown",
@@ -54,7 +65,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 2
+     "prompt_number": 28
     },
     {
      "cell_type": "code",
@@ -68,13 +79,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 3,
+       "prompt_number": 29,
        "text": [
-        "-1.2782579732254964"
+        "0.5410987534786378"
        ]
       }
      ],
-     "prompt_number": 3
+     "prompt_number": 29
     },
     {
      "cell_type": "code",
@@ -88,13 +99,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 4,
+       "prompt_number": 30,
        "text": [
-        "0.8069064490989402"
+        "0.05064428342420347"
        ]
       }
      ],
-     "prompt_number": 4
+     "prompt_number": 30
     },
     {
      "cell_type": "code",
@@ -105,7 +116,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 5
+     "prompt_number": 31
     },
     {
      "cell_type": "code",
@@ -119,13 +130,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 6,
+       "prompt_number": 32,
        "text": [
-        "array([ 0.,  1.])"
+        "array([], dtype=float64)"
        ]
       }
      ],
-     "prompt_number": 6
+     "prompt_number": 32
     },
     {
      "cell_type": "code",
@@ -136,7 +147,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 7
+     "prompt_number": 33
     },
     {
      "cell_type": "code",
@@ -150,7 +161,7 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 8,
+       "prompt_number": 34,
        "text": [
         "array([[ 0,  1,  2,  3,  4],\n",
         "       [ 5,  6,  7,  8,  9],\n",
@@ -158,7 +169,7 @@
        ]
       }
      ],
-     "prompt_number": 8
+     "prompt_number": 34
     },
     {
      "cell_type": "code",
@@ -169,7 +180,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 9
+     "prompt_number": 35
     },
     {
      "cell_type": "code",
@@ -180,7 +191,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 10
+     "prompt_number": 36
     },
     {
      "cell_type": "code",
@@ -194,13 +205,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 11,
+       "prompt_number": 37,
        "text": [
-        "\"['02-Dec-2014', 'ESW', 'William Mckee', '15:09', 'sunny and mum is back']['02-Dec-2014', 'build wire dibo', '17:41']\""
+        "\"['ESW', '18:14', 'William Mckee', 'testing locally', '07-Jan-2015']\""
        ]
       }
      ],
-     "prompt_number": 11
+     "prompt_number": 37
     },
     {
      "cell_type": "code",
@@ -218,24 +229,18 @@
        "text": [
         "[\n",
         "'\n",
-        "0\n",
-        "2\n",
-        "-\n",
-        "D\n",
-        "e\n",
-        "c\n",
-        "-\n",
-        "2\n",
-        "0\n",
-        "1\n",
-        "4\n",
+        "E\n",
+        "S\n",
+        "W\n",
         "'\n",
         ",\n",
         " \n",
         "'\n",
-        "E\n",
-        "S\n",
-        "W\n",
+        "1\n",
+        "8\n",
+        ":\n",
+        "1\n",
+        "4\n",
         "'\n",
         ",\n",
         " \n",
@@ -257,96 +262,64 @@
         ",\n",
         " \n",
         "'\n",
+        "t\n",
+        "e\n",
+        "s\n",
+        "t\n",
+        "i\n",
+        "n\n",
+        "g\n",
+        " \n",
+        "l\n",
+        "o\n",
+        "c\n",
+        "a\n",
+        "l\n",
+        "l\n",
+        "y\n",
+        "'\n",
+        ",\n",
+        " \n",
+        "'\n",
+        "0\n",
+        "7\n",
+        "-\n",
+        "J\n",
+        "a\n",
+        "n\n",
+        "-\n",
+        "2\n",
+        "0\n",
         "1\n",
         "5\n",
-        ":\n",
-        "0\n",
-        "9\n",
-        "'\n",
-        ",\n",
-        " \n",
-        "'\n",
-        "s\n",
-        "u\n",
-        "n\n",
-        "n\n",
-        "y\n",
-        " \n",
-        "a\n",
-        "n\n",
-        "d\n",
-        " \n",
-        "m\n",
-        "u\n",
-        "m\n",
-        " \n",
-        "i\n",
-        "s\n",
-        " \n",
-        "b\n",
-        "a\n",
-        "c\n",
-        "k\n",
-        "'\n",
-        "]\n",
-        "[\n",
-        "'\n",
-        "0\n",
-        "2\n",
-        "-\n",
-        "D\n",
-        "e\n",
-        "c\n",
-        "-\n",
-        "2\n",
-        "0\n",
-        "1\n",
-        "4\n",
-        "'\n",
-        ",\n",
-        " \n",
-        "'\n",
-        "b\n",
-        "u\n",
-        "i\n",
-        "l\n",
-        "d\n",
-        " \n",
-        "w\n",
-        "i\n",
-        "r\n",
-        "e\n",
-        " \n",
-        "d\n",
-        "i\n",
-        "b\n",
-        "o\n",
-        "'\n",
-        ",\n",
-        " \n",
-        "'\n",
-        "1\n",
-        "7\n",
-        ":\n",
-        "4\n",
-        "1\n",
         "'\n",
         "]\n"
        ]
       }
      ],
-     "prompt_number": 12
+     "prompt_number": 38
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "#dev = usb.core.find()"
+      "dev = usb.core.find()"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 13
+     "outputs": [
+      {
+       "ename": "NameError",
+       "evalue": "name 'usb' is not defined",
+       "output_type": "pyerr",
+       "traceback": [
+        "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+        "\u001b[1;32m<ipython-input-41-b3aa8b97e4c6>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mdev\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0musb\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcore\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfind\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+        "\u001b[1;31mNameError\u001b[0m: name 'usb' is not defined"
+       ]
+      }
+     ],
+     "prompt_number": 41
     },
     {
      "cell_type": "code",
@@ -357,7 +330,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 14
+     "prompt_number": 40
     },
     {
      "cell_type": "code",
@@ -399,127 +372,72 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "busses = usb.busses()"
+      "#busses = usb.busses()"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "ename": "NameError",
-       "evalue": "name 'usb' is not defined",
-       "output_type": "pyerr",
-       "traceback": [
-        "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-        "\u001b[1;32m<ipython-input-18-a5c7e51db938>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mbusses\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0musb\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mbusses\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-        "\u001b[1;31mNameError\u001b[0m: name 'usb' is not defined"
-       ]
-      }
-     ],
-     "prompt_number": 18
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "for bus in busses:\n",
-      "    print bus"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "ename": "NameError",
-       "evalue": "name 'busses' is not defined",
-       "output_type": "pyerr",
-       "traceback": [
-        "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-        "\u001b[1;32m<ipython-input-19-bd8a70c620a6>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mfor\u001b[0m \u001b[0mbus\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mbusses\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m     \u001b[1;32mprint\u001b[0m \u001b[0mbus\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-        "\u001b[1;31mNameError\u001b[0m: name 'busses' is not defined"
-       ]
-      }
-     ],
+     "outputs": [],
      "prompt_number": 19
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "for bus in busses:\n",
-      "  devices = bus.devices\n",
-      "  for dev in devices:\n",
-      "    print repr(dev)\n",
-      "    print \"Device:\", dev.filename\n",
-      "    print \"  idVendor: %d (0x%04x)\" % (dev.idVendor, dev.idVendor)\n",
-      "    print \"  idProduct: %d (0x%04x)\" % (dev.idProduct, dev.idProduct)\n",
-      "    print \"Manufacturer:\", dev.iManufacturer\n",
-      "    print \"Serial:\", dev.iSerialNumber\n",
-      "    print \"Product:\", dev.iProduct"
+      "#for bus in busses:\n",
+      "#    print bus"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "ename": "NameError",
-       "evalue": "name 'busses' is not defined",
-       "output_type": "pyerr",
-       "traceback": [
-        "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-        "\u001b[1;32m<ipython-input-22-6786af971ef0>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mfor\u001b[0m \u001b[0mbus\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mbusses\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m   \u001b[0mdevices\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mbus\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdevices\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m   \u001b[1;32mfor\u001b[0m \u001b[0mdev\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mdevices\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m     \u001b[1;32mprint\u001b[0m \u001b[0mrepr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdev\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[1;32mprint\u001b[0m \u001b[1;34m\"Device:\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdev\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfilename\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-        "\u001b[1;31mNameError\u001b[0m: name 'busses' is not defined"
-       ]
-      }
-     ],
-     "prompt_number": 22
+     "outputs": [],
+     "prompt_number": 20
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "dev"
+      "#for bus in busses:\n",
+      "#  devices = bus.devices\n",
+      "#  for dev in devices:\n",
+      "#    print repr(dev)\n",
+      "#    print \"Device:\", dev.filename\n",
+      "#    print \"  idVendor: %d (0x%04x)\" % (dev.idVendor, dev.idVendor)\n",
+      "#    print \"  idProduct: %d (0x%04x)\" % (dev.idProduct, dev.idProduct)\n",
+      "#    print \"Manufacturer:\", dev.iManufacturer\n",
+      "#    print \"Serial:\", dev.iSerialNumber\n",
+      "#    print \"Product:\", dev.iProduct"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "ename": "NameError",
-       "evalue": "name 'dev' is not defined",
-       "output_type": "pyerr",
-       "traceback": [
-        "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-        "\u001b[1;32m<ipython-input-23-8eec1e97ac60>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mdev\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-        "\u001b[1;31mNameError\u001b[0m: name 'dev' is not defined"
-       ]
-      }
+     "outputs": [],
+     "prompt_number": 21
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "#dev"
      ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
      "prompt_number": 23
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "dev.idProduct"
+      "#dev.idProduct"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "ename": "NameError",
-       "evalue": "name 'dev' is not defined",
-       "output_type": "pyerr",
-       "traceback": [
-        "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-        "\u001b[1;32m<ipython-input-24-9c1dccf553fb>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mdev\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0midProduct\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-        "\u001b[1;31mNameError\u001b[0m: name 'dev' is not defined"
-       ]
-      }
-     ],
+     "outputs": [],
      "prompt_number": 24
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "dev.idVendor"
+      "#dev.idVendor"
      ],
      "language": "python",
      "metadata": {},
@@ -541,51 +459,29 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "dev.iManufacturer"
+      "#dev.iManufacturer"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "ename": "NameError",
-       "evalue": "name 'dev' is not defined",
-       "output_type": "pyerr",
-       "traceback": [
-        "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-        "\u001b[1;32m<ipython-input-26-fe2293c371c7>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mdev\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0miManufacturer\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-        "\u001b[1;31mNameError\u001b[0m: name 'dev' is not defined"
-       ]
-      }
+     "outputs": [],
+     "prompt_number": 25
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "#dev.iSerialNumber"
      ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
      "prompt_number": 26
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "dev.iSerialNumber"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "ename": "NameError",
-       "evalue": "name 'dev' is not defined",
-       "output_type": "pyerr",
-       "traceback": [
-        "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-        "\u001b[1;32m<ipython-input-27-781840b70217>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mdev\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0miSerialNumber\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-        "\u001b[1;31mNameError\u001b[0m: name 'dev' is not defined"
-       ]
-      }
-     ],
-     "prompt_number": 27
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "repr(dev)"
+      "#repr(dev)"
      ],
      "language": "python",
      "metadata": {},
@@ -607,17 +503,17 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "device_re = re.compile(\"Bus\\s+(?P<bus>\\d+)\\s+Device\\s+(?P<device>\\d+).+ID\\s(?P<id>\\w+:\\w+)\\s(?P<tag>.+)$\", re.I)\n",
-      "df = subprocess.check_output(\"lsusb\", shell=True)\n",
-      "devices = []\n",
-      "for i in df.split('\\n'):\n",
-      "    if i:\n",
-      "        info = device_re.match(i)\n",
-      "        if info:\n",
-      "            dinfo = info.groupdict()\n",
-      "            dinfo['device'] = '/dev/bus/usb/%s/%s' % (dinfo.pop('bus'), dinfo.pop('device'))\n",
-      "            devices.append(dinfo)\n",
-      "print devices"
+      "#device_re = re.compile(\"Bus\\s+(?P<bus>\\d+)\\s+Device\\s+(?P<device>\\d+).+ID\\s(?P<id>\\w+:\\w+)\\s(?P<tag>.+)$\", re.I)\n",
+      "#df = subprocess.check_output(\"lsusb\", shell=True)\n",
+      "#devices = []\n",
+      "#for i in df.split('\\n'):\n",
+      "#    if i:\n",
+      "#        info = device_re.match(i)\n",
+      "#        if info:\n",
+      "#            dinfo = info.groupdict()\n",
+      "#            dinfo['device'] = '/dev/bus/usb/%s/%s' % (dinfo.pop('bus'), dinfo.pop('device'))\n",
+      "#            devices.append(dinfo)\n",
+      "#print devices"
      ],
      "language": "python",
      "metadata": {},
