created coffee html/py files

--- a/lcacoffee.ipynb
+++ b/lcacoffee.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 97,
    "metadata": {
     "collapsed": false
    },
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 98,
    "metadata": {
     "collapsed": true
    },
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 99,
    "metadata": {
     "collapsed": false
    },
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 100,
    "metadata": {
     "collapsed": false
    },
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 101,
    "metadata": {
     "collapsed": true
    },
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 102,
    "metadata": {
     "collapsed": false
    },
@@ -268,7 +268,7 @@
        "  u'FIELD27': u''}]"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -279,7 +279,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 102,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
    "metadata": {
     "collapsed": false
    },
@@ -306,7 +315,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 109,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7"
+      ]
+     },
+     "execution_count": 109,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(valia)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
    "metadata": {
     "collapsed": false
    },
@@ -326,10 +357,27 @@
     }
    ],
    "source": [
-    "for vals in valia:\n",
-    "    if '- -' in vals:\n",
-    "        print vals"
+    "for vals in valia:        \n",
+    "    print vals"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
