--- a/fairfieldlogin.ipynb
+++ b/fairfieldlogin.ipynb
@@ -526,7 +526,7 @@
     }
    ],
    "source": [
-    "os.sysconf_names"
+    "#os.sysconf_names"
    ]
   },
   {
@@ -585,7 +585,7 @@
     "os.listdir('/home/wcmckee/fairfieldcode/posts/')\n",
     "\n",
     "for ipos in os.listdir('/home/wcmckee/fairfieldcode/posts/'):\n",
-    "    print ipos\n",
+    "    #print ipos\n",
     "    \n",
     "    spliz.append([os.path.splitext(' ')[0] for x in ipos])"
    ]
@@ -680,7 +680,7 @@
     }
    ],
    "source": [
-    "spliz"
+    "#spliz"
    ]
   },
   {
@@ -709,6 +709,15 @@
     "   # if (' ') in opfa.strip('.ipynb'):\n",
     "    #    print opfa.strip('.ipython')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -806,61 +815,9 @@
    },
    "outputs": [],
    "source": [
-    "import nikola"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "os.chdir('/home/wcmckee/fairfieldcode/')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "768"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "os.system('nikola build')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
+    "import nikola\n",
+    "os.chdir('/home/wcmckee/fairfieldcode/')\n",
+    "os.system('nikola build')\n",
     "os.system('rsync -azP /home/wcmckee/fairfieldcode wcmckee@wcmckee.com:/home/wcmckee/fairfieldcode/')"
    ]
   },
