--- a/artcontrolme.ipynb
+++ b/artcontrolme.ipynb
@@ -773,6 +773,7 @@
       "oil-paint-portrait-tree.meta\n",
       "2211.meta\n",
       "kobo-mini-drawing.meta\n",
+      "test.txt\n",
       "5121.meta\n",
       "gjgj.meta\n",
       "redditgetsdrawn-promarker-christmas.wp\n",
@@ -1630,6 +1631,7 @@
        " u'oil-paint-portrait-tree.meta',\n",
        " u'2211.meta',\n",
        " u'kobo-mini-drawing.meta',\n",
+       " u'test.txt',\n",
        " u'5121.meta',\n",
        " u'gjgj.meta',\n",
        " u'redditgetsdrawn-promarker-christmas.wp',\n",
@@ -2429,12 +2431,7 @@
     {
      "data": {
       "text/plain": [
-       "['BBJ08 Bugs\\n',\n",
-       " 'bbj08-bugs\\n',\n",
-       " '2014-10-18 22:47:49\\n',\n",
-       " 'bacongamejam,digital,Digital Painting,gamejam,GIMP\\n',\n",
-       " '\\n',\n",
-       " '\\n']"
+       "['BBJ08 Bugs\\n', 'bbj08-bugs\\n', '2014-10-18 22:47:49\\n']"
       ]
      },
      "execution_count": 20,
@@ -6714,9 +6711,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {
     "collapsed": false
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
    },
    "outputs": [],
    "source": []
