--- a/bbknikola.ipynb
+++ b/bbknikola.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 31,
    "metadata": {
     "collapsed": true
    },
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 32,
    "metadata": {
     "collapsed": false
    },
@@ -76,10 +76,10 @@
     {
      "data": {
       "text/plain": [
-       "'05:15:36'"
+       "'01:55:39'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 33,
    "metadata": {
     "collapsed": false
    },
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 34,
    "metadata": {
     "collapsed": true
    },
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 35,
    "metadata": {
     "collapsed": false
    },
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 36,
    "metadata": {
     "collapsed": false
    },
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 37,
    "metadata": {
     "collapsed": true
    },
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 38,
    "metadata": {
     "collapsed": false
    },
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 39,
    "metadata": {
     "collapsed": false
    },
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 40,
    "metadata": {
     "collapsed": false
    },
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 41,
    "metadata": {
     "collapsed": true
    },
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 42,
    "metadata": {
     "collapsed": false
    },
@@ -208,7 +208,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Name of file to blog: test\n"
+      "Name of file to blog: ld33\n"
      ]
     }
    ],
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 43,
    "metadata": {
     "collapsed": false
    },
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 44,
    "metadata": {
     "collapsed": false
    },
@@ -246,7 +246,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "post tags: wow, test\n"
+      "post tags: ld33, ldjam, gamejam\n"
      ]
     }
    ],
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 45,
    "metadata": {
     "collapsed": false
    },
@@ -265,7 +265,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "path to search: /home/wcmckee/\n"
+      "path to search: /home/wcmckee\n"
      ]
     }
    ],
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 46,
    "metadata": {
     "collapsed": true
    },
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 47,
    "metadata": {
     "collapsed": false
    },
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 48,
    "metadata": {
     "collapsed": true
    },
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 49,
    "metadata": {
     "collapsed": true
    },
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 50,
    "metadata": {
     "collapsed": false
    },
@@ -348,7 +348,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "blog dir: /home/wcmckee/bb\n"
+      "blog dir: /home/wcmckee/github/brobeurdotcom\n"
      ]
     }
    ],
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 55,
    "metadata": {
     "collapsed": true
    },
@@ -378,30 +378,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 56,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/home/wcmckee/github/wcmckee.com/posts/pgguserdel.ipynb\n",
-      "/home/wcmckee/github/signinlca/pgguserdel.ipynb\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for fie in files:\n",
     "    #print fie\n",
-    "    print fie\n",
-    "    os.system('cp ' + fie + ' ' + podir)"
+    "    print (fie)\n",
+    "    print ('Copy ' + fie ' to ' + postsdir)\n",
+    "    os.system('cp ' + fie + ' ' + postsdir)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 57,
    "metadata": {
     "collapsed": true
    },
@@ -423,15 +415,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.chdir(podir)\n",
+    "os.system('nikola build')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "os.chdir(podir)\n",
-    "os.system('nikola build')"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -450,7 +462,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.4.0"
+   "version": "3.4.2"
   }
  },
  "nbformat": 4,
