--- a/bbknikola.ipynb
+++ b/bbknikola.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 57,
    "metadata": {
     "collapsed": false
    },
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 58,
    "metadata": {
     "collapsed": false
    },
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 59,
    "metadata": {
     "collapsed": true
    },
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 60,
    "metadata": {
     "collapsed": false
    },
@@ -76,10 +76,10 @@
     {
      "data": {
       "text/plain": [
-       "'01:55:39'"
+       "'21:20:46'"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 61,
    "metadata": {
     "collapsed": false
    },
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 62,
    "metadata": {
     "collapsed": true
    },
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 63,
    "metadata": {
     "collapsed": false
    },
@@ -126,7 +126,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 64,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'2015/08/23 21:20:46'"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fultim"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
    "metadata": {
     "collapsed": false
    },
@@ -137,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 66,
    "metadata": {
     "collapsed": true
    },
@@ -148,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 67,
    "metadata": {
     "collapsed": false
    },
@@ -159,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 68,
    "metadata": {
     "collapsed": false
    },
@@ -170,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 69,
    "metadata": {
     "collapsed": false
    },
@@ -183,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 70,
    "metadata": {
     "collapsed": true
    },
@@ -199,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 71,
    "metadata": {
     "collapsed": false
    },
@@ -208,7 +230,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Name of file to blog: ld33\n"
+      "Name of file to blog: nikolatest\n"
      ]
     }
    ],
@@ -218,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 72,
    "metadata": {
     "collapsed": false
    },
@@ -237,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 73,
    "metadata": {
     "collapsed": false
    },
@@ -246,7 +268,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "post tags: ld33, ldjam, gamejam\n"
+      "post tags: nikola, wordpress, php\n"
      ]
     }
    ],
@@ -256,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 74,
    "metadata": {
     "collapsed": false
    },
@@ -265,12 +287,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "path to search: /home/wcmckee\n"
+      "path to search: /home/wcmckee/\n"
      ]
     }
    ],
    "source": [
     "pear = input('path to search: ')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "jsve = dict({'filename' : nbog + etnam, 'tags' : tagmak, 'path' : pear, 'date' : fulda, \n",
+    "             'time' : returntime()})"
    ]
   },
   {
@@ -284,7 +318,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 76,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'date': '2015/08/23',\n",
+       " 'filename': 'nikolatest.rst',\n",
+       " 'path': '/home/wcmckee/',\n",
+       " 'tags': 'nikola, wordpress, php',\n",
+       " 'time': '21:20:46'}"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "jsve"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
    "metadata": {
     "collapsed": true
    },
@@ -295,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 78,
    "metadata": {
     "collapsed": true
    },
@@ -306,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 79,
    "metadata": {
     "collapsed": false
    },
@@ -317,7 +377,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 80,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/wcmckee/brobeurpost/nikolatest.rst\n"
+     ]
+    }
+   ],
+   "source": [
+    "for fil in files:\n",
+    "    print (fil)\n",
+    "    jsve.update({'filefound' : fil})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'date': '2015/08/23',\n",
+       " 'filefound': '/home/wcmckee/brobeurpost/nikolatest.rst',\n",
+       " 'filename': 'nikolatest.rst',\n",
+       " 'path': '/home/wcmckee/',\n",
+       " 'tags': 'nikola, wordpress, php',\n",
+       " 'time': '21:20:46'}"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "jsve"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
    "metadata": {
     "collapsed": true
    },
@@ -328,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 83,
    "metadata": {
     "collapsed": true
    },
@@ -339,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 84,
    "metadata": {
     "collapsed": false
    },
@@ -358,13 +475,140 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 85,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "jsve.update({'blogdir' : podir})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "postsdir = podir + ('/posts/' )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<generator object file_paths at 0xb2894874>"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "files"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "for fie in files:\n",
+    "    #print fie\n",
+    "    print (fie)\n",
+    "    print ('Copy ' + fie + ' to ' + postsdir)\n",
+    "    os.system('cp ' + fie + ' ' + postsdir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/wcmckee/github/brobeurdotcom\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (podir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "nikolatest\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (nbog)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "opeza = open(podir + '/posts/' + nbog + '.meta', 'w')\n",
+    "opeza.write(nbog + '\\n' + nbog + '\\n' + fultim + '\\n' + tagmak)\n",
+    "\n",
+    "opeza.close()"
    ]
   },
   {
@@ -382,43 +626,6 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": [
-    "for fie in files:\n",
-    "    #print fie\n",
-    "    print (fie)\n",
-    "    print ('Copy ' + fie ' to ' + postsdir)\n",
-    "    os.system('cp ' + fie + ' ' + postsdir)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 57,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "opeza = open(podir + nbog + '.meta', 'w')\n",
-    "opeza.write(nbog + '\\n' + nbog + '\\n' + fultim + '\\n' + tagmak)\n",
-    "opeza.close()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 58,
-   "metadata": {
-    "collapsed": false
-   },
    "outputs": [
     {
      "data": {
@@ -426,7 +633,7 @@
        "0"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
